--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode development",
-    "start": "node server.js"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development",
+    "serve": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -36,11 +37,14 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
     "prop-types": "^15.7.2",
+    "styled-components": "^4.4.1",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
