--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lokijs": "^1.5.8",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "uuid": "^3.3.3"
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
