--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --mode development",
-    "serve": "node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
